--------------------------  HepMC3.3.2 --------------------------

2024-04-11 Luke Pickering
  * Tweaks ReaderAscii logic to be more flexible about the number of space characters

--------------------------  HepMC3.3.1 --------------------------

2024-02-27 Andrii Verbytskyi
         * Require cmake>3.10 for compatibility with cmake4.
           Thanks to Mattias Ellert
	 * Multiple bugfixes and improvements.
           Mattias Ellert, Matthew Feickert
2024-12-26 Andrii Verbytskyi
	 * Add uproot5 to the tests
2024-11-29 Andrii Verbytskyi
	 * Add static libraries and other fixes to HepMC3-config.
2024-08-30 Andrii Verbytskyi
	 * Fix weights usage in the AnalysisExample.cc file.
	 * Update convert_example.cc to allow for one argument for the "dump" format.
2024-06-19 Andrii Verbytskyi
         * Fix for a "Conditional jump or move depends on uninitialised value(s)" problem detected by valgrind

--------------------------  HepMC3.3.0 --------------------------

2024-05-23 Andrii Verbytskyi
         * Update python bindings with binder 1.4.2
         * Update bxzstr to bxzstr 1.2.2 + patches
         * Formatting
2024-05-26 Andy Buckley
         * Explicitly return for inf-generating eta / massless rapidity along pz, to avoid FPE triggering.
2024-04-20 Andy Buckley
         * Suppress cross-section/weight count-mismatch warning if only one cross-section.
2024-04-08 Andrii Verbytskyi
         * Add support for reading with uproot
         * Drop Python2 support
2023-10-24 Mattias Ellert
         * Fix compilation with Python 3.13.0a1.
           See: https://github.com/pybind/pybind11/pull/4902
2023-09-15 Andrii Verbytskyi for HepMC
         * Major update of the build system, removed most of the custom modules.
2023-09-03 Andrii Verbytskyi for HepMC
        * Removed functions that operate on raw pointers.

--------------------------  HepMC3.2.7 ----------------------

2023-10-02 Andrii Verbytskyi for HepMC