@@ -1,12 +1,8 @@
 # building examples
 #------------------
-cmake_minimum_required(VERSION 3.10.0 FATAL_ERROR)
+cmake_minimum_required(VERSION 3.10.0...4.0.3)
 include_directories(${PROJECT_SOURCE_DIR}/include )
-if (${CMAKE_VERSION} VERSION_GREATER "3.8")
-  cmake_policy(SET CMP0069 NEW)
-  include(CheckIPOSupported)
-endif()
-
+include(CheckIPOSupported)
 
 #This is needed for standalone compilation
 if (USE_INSTALLED_HEPMC3)
