@@ -1,5 +1,6 @@
 --------------------------  HepMC3.3.2 --------------------------
-
+2025-07-11 Andrii Verbytskyi
+  * Require cmake>3.10 and allow for cmake policies to be in range that correspond 3.10.0...4.0.3. Add cmake version testing in CI.
 2024-04-11 Luke Pickering
   * Tweaks ReaderAscii logic to be more flexible about the number of space characters
 
